--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,1 +1,32 @@
 @import "../../node_modules/bulma/bulma.sass";
+
+.nuxt-content-highlight {
+  .tag {
+    align-items: inherit;
+    background-color: inherit;
+    border-radius: inherit;
+    color: inherit;
+    display: inherit;
+    font-size: inherit;
+    height: inherit;
+    justify-content: inherit;
+    line-height: inherit;
+    padding-left: inherit;
+    padding-right: inherit;
+    white-space: inherit;
+  }
+  .number {
+    align-items: inherit;
+    background-color: inherit;
+    border-radius: inherit;
+    display: inherit;
+    font-size: inherit;
+    height: inherit;
+    justify-content: inherit;
+    margin-right: inherit;
+    min-width: inherit;
+    padding: inherit;
+    text-align: inherit;
+    vertical-align: inherit;
+  }
+}
