--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,32 +1,32 @@
-@import "../../node_modules/bulma/bulma.sass";
+$primary: #25adda;
+$secondary: #7a7a7a;
 
-.nuxt-content-highlight {
-  .tag {
-    align-items: inherit;
-    background-color: inherit;
-    border-radius: inherit;
-    color: inherit;
-    display: inherit;
-    font-size: inherit;
-    height: inherit;
-    justify-content: inherit;
-    line-height: inherit;
-    padding-left: inherit;
-    padding-right: inherit;
-    white-space: inherit;
+@import "../../node_modules/bootstrap/scss/bootstrap";
+
+h2 {
+  padding-top: 1rem;
+}
+
+@include media-breakpoint-up(lg) {
+  .bg-lg-none {
+    background-color: transparent !important;
   }
-  .number {
-    align-items: inherit;
-    background-color: inherit;
-    border-radius: inherit;
-    display: inherit;
-    font-size: inherit;
-    height: inherit;
-    justify-content: inherit;
-    margin-right: inherit;
-    min-width: inherit;
-    padding: inherit;
-    text-align: inherit;
-    vertical-align: inherit;
+}
+
+.link-reset {
+  color: inherit;
+  text-decoration: none;
+}
+
+@each $name, $color in $theme-colors {
+  .bg-#{$name}-light {
+    background-color: lighten($color, 45%);
   }
+  .text-#{$name}-dark {
+    color: darken($color, 15%);
+  }
+}
+
+.badge {
+  padding: 0.5em 0.75em;
 }
