検索のUIを変更

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,6 +2,7 @@
 
 $primary: #25adda;
 $secondary: #7a7a7a;
+$input-placeholder-color: #7a7a7a;
 
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/maps";
