--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -44,6 +44,9 @@ $input-placeholder-color: #7a7a7a;
 @import "../../node_modules/bootstrap/scss/utilities";
 @import "../../node_modules/bootstrap/scss/utilities/api";
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap');
+body { font-family: 'Noto Sans JP', sans-serif; }
+
 @include media-breakpoint-up(lg) {
   .bg-lg-none {
     background-color: transparent !important;
