--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -95,7 +95,8 @@ body { font-family: 'Noto Sans JP', sans-serif; }
   }
   img {
     display: block;
-    width: 100%;
+    max-width: 100%;
+    max-height: 75vh;
     margin: 1rem 0;
   }
   blockquote {
