色のコントラストを調整

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,8 +1,8 @@
 @import "../../node_modules/bootstrap/scss/functions";
 
 $primary: #25adda;
-$secondary: #7a7a7a;
-$input-placeholder-color: #7a7a7a;
+$secondary: #767676;
+$input-placeholder-color: #767676;
 
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/maps";
