--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,6 +3,8 @@
 $primary: #25adda;
 $secondary: #767676;
 $input-placeholder-color: #767676;
+$headings-line-height: 1.5;
+$line-height-base: 1.75;
 
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/maps";
