段落の間隔を調整

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,7 @@ $secondary: #767676;
 $input-placeholder-color: #767676;
 $headings-line-height: 1.5;
 $line-height-base: 1.75;
+$paragraph-margin-bottom: 2em;
 
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/maps";
